<resources>
    <string name="app_name">My Foods</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="category">categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_searching">for searching</string>
    <string name="todo">Todo</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="our_populer_foods">Our Populer foods</string>
    <string name="random_meal">random Meal</string>
    <string name="instructions">"- Instructions : "</string>
    <string name="AreaInfo">%1$s%2$s</string>
    <string name="catagory_info">%1$s%2$s</string>
    <string name="beef">Beef</string>
    <string name="tvCategoryName">%1$s  :%2$s</string>
    <string name="no_favorites">No Favorites...</string>
    <string name="type_meal_name">Type meal name ...</string>
    <string name="image_of_search">image of search</string>
    <string name="fast_food">fast food</string>
</resources>