<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".HomeFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_10sdp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/myfont"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/primary"/>

            <ImageView
                android:id="@+id/search_bar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_search_24" />

        </LinearLayout>
        <TextView
            android:id="@+id/choice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/what_would_you_like_to_eat"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:fontFamily="@font/myfont"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintStart_toStartOf="@id/linear_layout"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/choice_text"
            app:layout_constraintStart_toStartOf="@id/choice_text"
            >
            <TextView
                android:id="@+id/cardTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvOurPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_populer_foods"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:fontFamily="@font/myfont"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cardImageView"
            app:layout_constraintStart_toStartOf="@id/cardImageView"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularFoods"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:scrollbars="horizontal"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tvOurPopular"
            app:layout_constraintStart_toStartOf="@id/tvOurPopular"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:fontFamily="@font/myfont"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/rvPopularFoods"
            app:layout_constraintStart_toStartOf="@id/rvPopularFoods"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/categoriesCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/tvCategory"
            app:layout_constraintStart_toStartOf="@id/tvCategory">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategoriesView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scrollbars="none"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>